Try to fix weird behaviour on mobiles

--- a/triplog-client/public/styles/triplog/_general.scss
+++ b/triplog-client/public/styles/triplog/_general.scss
@@ -1,5 +1,6 @@
 html, body {
-  min-height: 100vh;
+  height: 100%;
+  overflow: auto;
 }
 
 .page-container, .page {
