--- a/triplog-client/public/styles/triplog/_navigation.scss
+++ b/triplog-client/public/styles/triplog/_navigation.scss
@@ -2,6 +2,7 @@
   background-color: $bgDefault;
   opacity: 0.9;
   z-index: 10;
+  -webkit-transform: translateZ(0);
 
   &.ios-status-bar {
     padding-top: $ios-status-bar-height;
